--- a/css/tasks.css
+++ b/css/tasks.css
@@ -46,7 +46,7 @@
 .task-body {
     display: grid;
     row-gap: 5px;
-    grid-template-rows: repeat(10, 50px);
+    grid-template-rows: repeat(auto-fit, 50px);
     max-height: calc(100vh - 50px);
     overflow: auto;
     -ms-overflow-style: none;
@@ -73,4 +73,35 @@
 
 .completed-tasks-container .task {
     background-color: lightgreen;
+}
+
+@media (min-width: 426px) and (max-width: 769px) {
+    .task-container {
+        height: max-content;
+        /* min-height: 100%; */
+    }
+}
+
+@media (max-width: 426px) {
+    .task-container {
+        display: block;
+        height: max-content;
+        border-bottom: solid 1px white;
+        padding-bottom: 5px;
+    }
+
+    .task-header {
+        height: 50px;
+    }
+
+    .not-started-tasks-container,
+    .in-process-tasks-container,
+    .completed-tasks-container {
+        display: block;
+        padding: 0 5px;
+    }
+
+    .task-body {
+        grid-template-rows: repeat(auto-fit, 50px);
+    }
 }
